# unicamotor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  README.md  StartRiderEditor.bat  build.bat  build.py  build.sh  premake5.lua
Libraries/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/UnicaBuildTool/: Cargo.toml
Tools/UnicaBuildTool/src/: build.rs  compile_shaders.rs  copyright_disclaimer.rs  create_project.rs  generate_solution.rs  main.rs
Tools/UnicaBuildTool/src/static_files/: cmake.rs  config.rs  header.rs  source.rs
Unica/: CMakeLists.txt  premake5.lua
Unica/Config/: BaseEngine.ini
Unica/Libraries/glfw/: premake5.lua
Unica/Shaders/: shader.frag  shader.vert
Unica/Source/: Main.cpp  Types.h  UnicaPCH.cpp  UnicaPCH.h
Unica/Source/Core/: Types.h  UnicaFileUtilities.cpp  UnicaFileUtilities.h  UnicaInstance.cpp  UnicaInstance.h  UnicaMinimal.h  UnicaPch.cpp  UnicaPch.h  UnicaSettings.h  UnicaSystemUtilities.cpp  UnicaSystemUtilities.h
Unica/Source/Engine/: EngineComponent.h  EngineCoreComponent.h  UnicaEngine.cpp  UnicaEngine.h
Unica/Source/Events/: EventHandler.cpp  EventHandler.h
Unica/Source/Graphics/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
Unica/Source/Input/: EventHandler.cpp  EventHandler.h
Unica/Source/Interfaces/: EngineCoreComponent.h
Unica/Source/Log/: Log.cpp  Log.h  Logger.cpp  Logger.h
Unica/Source/Logging/: Logger.cpp
Unica/Source/Renderer/: GameWindow.cpp  GameWindow.h  RenderInterface.cpp  RenderInterface.h  RenderManager.cpp  RenderManager.h  RenderWindow.cpp  RenderWindow.h
Unica/Source/Renderer/Managed/: ManagedInterface.cpp  ManagedInterface.h
Unica/Source/Renderer/SDL/: SdlAPI.cpp  SdlAPI.h
Unica/Source/Renderer/Vulkan/: VulkanAPI.cpp  VulkanAPI.h  VulkanInstance.cpp  VulkanInstance.h  VulkanInterface.cpp  VulkanInterface.h  VulkanObjectInterface.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueueFamilyIndices.cpp  VulkanQueueFamilyIndices.h  VulkanRenderWindow.cpp  VulkanRenderWindow.h  VulkanSwapChainSupportDetails.h  VulkanTypeInterface.h  VulkanVertex.cpp  VulkanVertex.h  VulkanWindowSurface.cpp  VulkanWindowSurface.h
Unica/Source/Renderer/Vulkan/Shaders/: ShaderUtilities.cpp  ShaderUtilities.h
Unica/Source/Renderer/Vulkan/VulkanTypes/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  VulkanWindowSurface.cpp  VulkanWindowSurface.h
Unica/Source/Subsystem/: SubsystemBase.h  SubsystemManager.cpp  SubsystemManager.h
Unica/Source/Timer/: TimeManager.cpp  TimeManager.h
Utilities/: Build.py  CreateUnicaProject.py  GenerateProjectFiles.py  GenerateSolutionFiles.py  WriteCopyrightDisclaimer.py
Utilities/UnicaBuildTool/: Cargo.toml
Utilities/UnicaBuildTool/src/: copyright_disclaimer.rs  generate_solution.rs  main.rs  utils.rs
Utilities/UnicaBuildTool/src/static_files/: mod.rs
config/: defaultengine.toml
src/: main.cpp
src/core/: arguments.cpp  arguments.h  directories.cpp  directories.h  memory.h  profiling.h  queue.cpp  queue.h  string.cpp  string.h  system.cpp  system.h  thread.cpp  thread.h  unicamotor.cpp  unicamotor.h  vector.h  version.h
src/demo/: demogame.cpp  demogame.h
src/game/: gameinstance.cpp  gameinstance.h  gamesubsystem.cpp  gamesubsystem.h
src/logging/: logging.cpp  logging.h
src/motor/: unicaconfig.h  unicamotor.cpp  unicamotor.h
src/renderer/: renderer.h
src/renderer/opengl/: opengl.cpp  opengl.h
src/renderer/vulkan/: vulkan.cpp  vulkan.h  vulkanallocatedimage.h  vulkandeletionqueue.cpp  vulkandeletionqueue.h  vulkanframedata.h  vulkaninitializers.cpp  vulkaninitializers.h  vulkanutilities.cpp  vulkanutilities.h
src/subsystem/: subsystem.h
src/timer/: timer.cpp  timer.h  timer_subsystem.cpp  timer_subsystem.h
tests/: unique_ptr.cpp  vector.cpp
