[package]
name = "unica_build_tool"
version = "0.1.0"
edition = "2021"
authors = ["joaofonseca.dev"]
description = "General use build tool for the Unica Engine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
