[package]
name = "unica_build_tool"
version = "0.1.0"
edition = "2021"
authors = ["joaofonseca.dev"]
description = "General use build tool for the Unica Engine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
walkdir = "2.3.3"
which = "4.4.0"
